# hkkm

./: .gitignore  AUDIT_AND_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL.md.bak  LISENCE  README.md  README.md.bak  README_V2.md  main.py  main.py.bak  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  structure.txt  test_colors.py  test_minimal.py
db/: animals.json  animals.json.bak  config.json  cropsdb.json  cropsdb.json.bak  fishdb.json  fishdb.json.bak  items.json  items.json.bak  leaderboard.json  leaderboard.json.bak
docs/: ROADMAP.md
modules/: inventory.py  leaderboard.py  login.py  login.py.bak  test.py  test.py.bak
scripts/: migrate_data.py
src/: __init__.py  cli.py
src/config/: __init__.py  platform.py  settings.py
src/core/exceptions/: __init__.py
src/core/models/: __init__.py  farm.py  game_data.py  inventory.py  user.py
src/core/repositories/: __init__.py  activity_repository.py  farm_repository.py  game_data_repository.py  inventory_repository.py  leaderboard_repository.py  user_repository.py
src/core/services/: __init__.py  economy_service.py  farm_service.py  fishing_service.py
src/db/: sqlite_manager.py
src/db/seed_data/: __init__.py  game_data.py
src/tui/: app.py
src/tui/screens/: animal_shop_screen.py  auth_screens.py  help_screen.py  main_menu_screen.py  trading_screen.py
src/tui/themes/: default.py
src/tui/widgets/: casino_widget.py  daily_widget.py  fishing_widget.py  job_center_widget.py  leaderboard_widget.py  my_room_widget.py  shop_widget.py  yard_widget.py
src/utils/: __init__.py  encoding.py  path_helper.py  validators.py
tests/: pytest.ini
tests/integration/: test_database.py
tests/unit/: test_economy.py  test_inventory.py  test_user.py
utils/: __init__.py  ai_providers.py  config.py  config.py.bak  db.py  db.py.bak  economy.py  economy.py.bak  external_services.py  game_data.py  helpers.py  helpers.py.bak  inventory_utils.py  inventory_utils.py.bak  items.py  items.py.bak  unlocks.py  utils.py  voice_chat.py
